--- a/school.html
+++ b/school.html
@@ -66,7 +66,7 @@
         <h3>Egyébb tapasztalataim:</h3>
         <li>Tanszéki Technikus próbaidő 1 hónap - SZTE Oktatási központ</li>
         <li>Önkéntes munka - Adatfelvivő(Excel) & tanársegéd, rendezvény szervező</li>
-
+        <li>Telekom - Telefonos ügyintéző</li>
         <div class="outro1">Az osztályunkból jelenleg is nagyon sokan küzdenek hogy el tudjanak helyezkedni, senki sem fogja egyhamar feladni</div>
 
       </div>
