--- a/school.html
+++ b/school.html
@@ -67,6 +67,7 @@
         <li>Tanszéki Technikus próbaidő 1 hónap - SZTE Oktatási központ</li>
         <li>Önkéntes munka - Adatfelvivő(Excel) & tanársegéd, rendezvény szervező</li>
         <li>Telekom - Telefonos ügyintéző</li>
+        <li>Pénztárgép kezelés</li>
         <div class="outro1">Az osztályunkból jelenleg is nagyon sokan küzdenek hogy el tudjanak helyezkedni, senki sem fogja egyhamar feladni</div>
 
       </div>
